# simple-http-server

./: CMakeLists.txt
include/: cmdargs.h  common.h  http.h  logger.h
src/: cmdargs.c  http.c  http_test.c  logger.c  main.c
